SDKs/googleapis.com/pagespeedonline/v5/python/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
pip install git+https://github.com/speakeasy-api/openapi-directory.git#subdirectory=SDKs/googleapis.com/pagespeedonline/v5/python
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```python
import sdk
from sdk.models import operations, shared

s = sdk.SDK()


req = operations.PagespeedonlinePagespeedapiRunpagespeedRequest(
    dollar_xgafv="2",
    access_token="provident",
    alt="proto",
    callback="quibusdam",
    captcha_token="unde",
    category=[
        "PERFORMANCE",
        "SEO",
        "BEST_PRACTICES",
        "PERFORMANCE",
    ],
    fields_="deserunt",
    key="suscipit",
    locale="iure",
    oauth_token="magnam",
    pretty_print=False,
    quota_user="debitis",
    strategy="STRATEGY_UNSPECIFIED",
    upload_type="delectus",
    upload_protocol="tempora",
    url="suscipit",
    utm_campaign="molestiae",
    utm_source="minus",
)
    
res = s.pagespeedapi.pagespeedonline_pagespeedapi_runpagespeed(req, operations.PagespeedonlinePagespeedapiRunpagespeedSecurity(
    oauth2="Bearer YOUR_ACCESS_TOKEN_HERE",
    oauth2c="Bearer YOUR_ACCESS_TOKEN_HERE",
))

if res.pagespeed_api_pagespeed_response_v5 is not None:
    # handle response
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## Available Resources and Operations


### pagespeedapi

* `pagespeedonline_pagespeedapi_runpagespeed` - Runs PageSpeed analysis on the page at the specified URL, and returns PageSpeed scores, a list of suggestions to make that page faster, and other information.
<!-- End SDK Available Operations -->

### Maturity

This SDK is in beta, and there may be breaking changes between versions without a major version update. Therefore, we recommend pinning usage
to a specific package version. This way, you can install the same version each time without breaking changes unless you are intentionally
looking for the latest version.

### Contributions

While we value open-source contributions to this SDK, this library is generated programmatically.
Feel free to open a PR or a Github issue as a proof of concept and we'll do our best to include it in a future release !

### SDK Created by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
